feat: Enhance client classes with page handling and add Config validation